--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "dependencies": {
     "@codemirror/basic-setup": "^0.20.0",
     "@codemirror/commands": "^6.2.2",
+    "@codemirror/lang-css": "^6.1.1",
+    "@codemirror/lang-html": "^6.4.3",
     "@codemirror/lang-javascript": "^6.1.5",
+    "@codemirror/lint": "^6.2.0",
     "@codemirror/state": "^6.2.0",
+    "@codemirror/theme-one-dark": "^6.1.1",
     "@codemirror/view": "^6.9.3",
+    "@emmetio/codemirror6-plugin": "^0.3.0",
+    "@replit/codemirror-indentation-markers": "^6.4.0",
     "codemirror": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
