--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@emmetio/codemirror6-plugin": "^0.3.0",
     "@replit/codemirror-indentation-markers": "^6.4.0",
     "codemirror": "^6.0.1",
+    "htmlhint": "^1.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
+    "@types/htmlhint": "^1.1.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
