--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@codemirror/lang-css": "^6.1.1",
     "@codemirror/lang-html": "^6.4.3",
     "@codemirror/lang-javascript": "^6.1.5",
-    "@codemirror/lint": "^6.2.0",
+    "@codemirror/language": "^6.6.0",
+    "@codemirror/lint": "^6.2.1",
     "@codemirror/state": "^6.2.0",
     "@codemirror/theme-one-dark": "^6.1.1",
     "@codemirror/view": "^6.9.3",
