--- a/package.json
+++ b/package.json
@@ -23,12 +23,17 @@
     "@replit/codemirror-indentation-markers": "^6.4.0",
     "codemirror": "^6.0.1",
     "htmlhint": "^1.1.4",
+    "i18next": "^23.4.4",
+    "i18next-chained-backend": "^4.4.0",
+    "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.3",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/htmlhint": "^1.1.2",
+    "@types/node": "^20.4.9",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
