--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@codemirror/theme-one-dark": "^6.1.1",
     "@codemirror/view": "^6.9.3",
     "@emmetio/codemirror6-plugin": "^0.3.0",
+    "@heroicons/react": "^2.0.18",
     "@replit/codemirror-indentation-markers": "^6.4.0",
     "codemirror": "^6.0.1",
     "htmlhint": "^1.1.4",
