--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.3",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "thememirror": "^2.0.1"
   },
   "devDependencies": {
     "@types/htmlhint": "^1.1.2",
